Updated dataset to correct sports trigger fire on afterinsert. Made insert more effecient by adding appointment list instead of individual on the insert

--- a/force-app/main/default/classes/SummitEventsRegisterAppointmentCtlr.cls
+++ b/force-app/main/default/classes/SummitEventsRegisterAppointmentCtlr.cls
@@ -16,8 +16,8 @@ public with sharing class SummitEventsRegisterAppointmentCtlr {
     public Summit_Events__c eventPage { get; set; }
     public String templateSelected { get; set; }
     public Boolean noOptionalAppointments { get; set; }
-    public Boolean requiredAppt {get;set;}
-    public String eventStartDateTimeCrumb {get;set;}
+    public Boolean requiredAppt { get; set; }
+    public String eventStartDateTimeCrumb { get; set; }
 
     public class incomingAppt {
         String apptId;
@@ -46,13 +46,14 @@ public with sharing class SummitEventsRegisterAppointmentCtlr {
                     SELECT Event_Name__c, Event_description__c, Event_Appointment_Title__c, Event_Appointment_Description__c, Event_Footer__c,
                             Template__c, Event_Home_Link_Title__c, Event_Home_Link_URL__c, Tracking_Options_Registration__c
                     FROM Summit_Events__c
-                    WHERE Id = :evtinfo.evtId][0];
+                    WHERE Id = :evtinfo.evtId
+            ][0];
             templateSelected = eventPage.Template__c;
 
             if (!String.isBlank(evtinfo.evtRegId)) {
                 evtInstance = [SELECT Instance_Title__c, Start_Date_Time__c, End_Date_Time__c FROM Summit_Events_Instance__c WHERE Id = :evtinfo.instanceID LIMIT 1];
 
-                if(evtInstance.Start_Date_Time__c != null && evtInstance.End_Date_Time__c != null ) {
+                if (evtInstance.Start_Date_Time__c != null && evtInstance.End_Date_Time__c != null) {
                     eventStartDateTimeCrumb = evtInstance.Start_Date_Time__c.format('MMMM d, YYYY, h:mm a') + ' - ' + evtInstance.End_Date_Time__c.format('h:mm a');
                 }
 
@@ -61,7 +62,7 @@ public with sharing class SummitEventsRegisterAppointmentCtlr {
                     String dayOfWeek = evtInstance.Start_Date_Time__c.format('EEEE');
                     // = dayOfWeek;
                     //Build available appointments
-                    appts = new Map<ID, Summit_Events_Appointment_Type__c>( [
+                    appts = new Map<ID, Summit_Events_Appointment_Type__c>([
                             SELECT Id, Name, Title__c, Description__c, Appointment_Type__c, Appointment_Category__c, Appointment_Limits__c, Chosen_State__c,
                                     Registrant_Input__c, Custom_Picklist__c, Sort_Order__c, Auto_Confirm_Appointment__c, Auto_add_building__c, Auto_Add_Time__c, Do_Not_Show_Time__c,
                                     Date_Available_Start__c, Date_Available_End__c, Day_of_Week_Availability__c, Required_Appointment__c, Appointment_Type_Status__c
@@ -77,7 +78,7 @@ public with sharing class SummitEventsRegisterAppointmentCtlr {
 
                     //Check if the user gets to select any appointments or they are all auto added
                     for (Summit_Events_Appointment_Type__c chosenCheck : appts.values()) {
-                        If (chosenCheck.Chosen_State__c != 'Added and Required' && chosenCheck.Chosen_State__c != 'Added but not shown' ) {
+                        If (chosenCheck.Chosen_State__c != 'Added and Required' && chosenCheck.Chosen_State__c != 'Added but not shown') {
                             noOptionalAppointments = false;
                             break;
                         }
@@ -196,7 +197,7 @@ public with sharing class SummitEventsRegisterAppointmentCtlr {
                     apptFormatted += '</textarea>';
                 }
                 if (apt.Registrant_Input__c == 'Custom pick list' || apt.Registrant_Input__c == 'Required custom pick list') {
-                    if(!String.isBlank(apt.Custom_Picklist__c)) {
+                    if (!String.isBlank(apt.Custom_Picklist__c)) {
                         apptFormatted += '<select';
                         if (apt.Registrant_Input__c == 'Required custom pick list') {
                             apptFormatted += ' required="required" class="appointmentCustomInput required" ';
@@ -231,6 +232,7 @@ public with sharing class SummitEventsRegisterAppointmentCtlr {
 
     public PageReference checkEventDetails() {
         PageReference eventActivePg = SEShared.checkForEvent();
+        appointmentsCRUD apptCrud = new appointmentsCRUD();
         if (eventActivePg == null) {
             //Get event into
             evtInfo = SEShared.getSummitEventsInfo();
@@ -242,12 +244,13 @@ public with sharing class SummitEventsRegisterAppointmentCtlr {
                             Chosen_State__c, Sort_Order__c, Auto_Confirm_Appointment__c, Auto_add_building__c, Auto_Add_Time__c, Do_Not_Show_Time__c
                     FROM Summit_Events_Appointment_Type__c
                     WHERE Summit_Events__c = :evtinfo.evtId
-                    AND (Chosen_State__c = 'Added' OR Chosen_State__c = 'Added and Required'  OR Chosen_State__c = 'Added but not shown')
+                    AND (Chosen_State__c = 'Added' OR Chosen_State__c = 'Added and Required' OR Chosen_State__c = 'Added but not shown')
                     AND Id NOT IN (SELECT Event_Appointment_Type__c FROM Summit_Events_Appointments__c WHERE Event_Registration__c = :RegId)
                     AND (Restrict_To_Instance_Title__r.Instance_Title__c = :evtInstance.Instance_Title__c OR Restrict_To_Instance_Title__r.Instance_Title__c = null)
                     ORDER BY Sort_Order__c ASC NULLS LAST
             ];
 
+            List<Summit_Events_Appointments__c> apptToAdd = new List<Summit_Events_Appointments__c>();
             for (Summit_Events_Appointment_Type__c appt : autoAddAppt) {
                 Summit_Events_Appointments__c addAppt = new Summit_Events_Appointments__c();
                 addAppt.Event_Appointment_Type__c = appt.Id;
@@ -263,8 +266,11 @@ public with sharing class SummitEventsRegisterAppointmentCtlr {
                 addAppt.Description__c = appt.Description__c;
                 addAppt.Registrant_Input__c = appt.Registrant_Input__c;
                 addAppt.Do_Not_Show_Time__c = appt.Do_Not_Show_Time__c;
-                appointmentsCRUD apptCRUD = new appointmentsCRUD();
-                addAppt = apptCRUD.updateAppointments(addAppt);
+                apptToAdd.add(addAppt);
+            }
+
+            if (apptToAdd.size() > 0 ) {
+                apptCRUD.updateAppointments(apptToAdd);
                 addedAppts = true;
             }
 
@@ -277,17 +283,20 @@ public with sharing class SummitEventsRegisterAppointmentCtlr {
 
     public PageReference saveOptions() {
         //remove old client created appointments
+        appointmentsCRUD apptCrud = new appointmentsCRUD();
+        PageReference submitPage = Page.SummitEventsSubmit;
+
         Summit_Events_Appointments__c[] deleteAppt = [
                 SELECT Id, Event_Registration__c, Client_Created_Appointment__c, Chosen_State__c, Do_Not_Show_Time__c
                 FROM Summit_Events_Appointments__c
                 WHERE Event_Registration__c = :evtinfo.evtRegId
                 AND Client_Created_Appointment__c = true
         ];
-        appointmentsCRUD apptCrud = new appointmentsCRUD();
         apptCrud.deleteAppointments(deleteAppt);
 
         List<incomingAppt> deserializedInvoices = (List<incomingAppt>) JSON.deserialize(incomingApptJSon, List<incomingAppt>.class);
-        PageReference submitPage = Page.SummitEventsSubmit;
+
+        List<Summit_Events_Appointments__c> apptToAdd = new List<Summit_Events_Appointments__c>();
         for (incomingAppt appt : deserializedInvoices) {
             Summit_Events_Appointments__c addAppt = new Summit_Events_Appointments__c();
             addAppt.Event_Registration__c = evtInfo.evtRegId;
@@ -303,7 +312,7 @@ public with sharing class SummitEventsRegisterAppointmentCtlr {
                 addAppt.Appointment_Type__c = appt.apptType;
             }
             addAppt.Appointment_title__c = appt.apptTitle;
-            if(appt.appSort == null) {
+            if (appt.appSort == null) {
                 addAppt.Sort_Order__c = 99;
             } else {
                 addAppt.Sort_Order__c = Integer.valueOf(appt.appSort);
@@ -320,13 +329,17 @@ public with sharing class SummitEventsRegisterAppointmentCtlr {
             if (apptDefinition.Do_Not_Show_Time__c != null) {
                 addAppt.Do_Not_Show_Time__c = apptDefinition.Do_Not_Show_Time__c;
             }
-            if(apptDefinition.Auto_Add_Time__c != null) {
+            if (apptDefinition.Auto_Add_Time__c != null) {
                 addAppt.Appointment_Time__c = apptDefinition.Auto_Add_Time__c;
             }
             addAppt.Description__c = appt.appDesc;
             addAppt.Registrant_Input__c = appt.appInput;
-            
-            addAppt = apptCRUD.updateAppointments(addAppt);
+
+            apptToAdd.add(addAppt);
+        }
+
+        if (apptToAdd.size() > 0) {
+            apptCRUD.updateAppointments(apptToAdd);
         }
         return submitPage;
     }
@@ -340,14 +353,13 @@ public with sharing class SummitEventsRegisterAppointmentCtlr {
 
     private without sharing class appointmentsCRUD {
 
-        public Summit_Events_Appointments__c updateAppointments(Summit_Events_Appointments__c appts) {
+        public void updateAppointments(List<Summit_Events_Appointments__c> appts) {
             try {
                 upsert appts;
             } catch (Exception ex) {
                 ApexPages.Message myMsg = new ApexPages.Message(ApexPages.Severity.WARNING, ex.getMessage());
                 ApexPages.addMessage(myMsg);
             }
-            return appts;
         }
 
         public void deleteAppointments(List<Summit_Events_Appointments__c> appts) {
